A host of small changes throughout the code, which could probably be merged with trunk relatively easily. Also merged remembering new map defaults from trunk.